# dotfiles

./: .gitignore  .gitmodules  .stignore  LICENSE.md  README.md  base.nix  bootstrap  common.nix  default.nix  desktop.nix  flake.nix  home.nix  private.nix  shell.nix  work.nix
arch/: completion.zsh  default.nix  slockArch.nix
aws/: aws-env
c/: cmake-compile-commands  path.zsh  profile.sh
connectiq/: default.nix  profile.sh
docker/: _docker-machine
emacs/: config.zsh  default.nix  ec  emacs-profiles.el.symlink  org-style.css  profile.sh  spacemacs.symlink
fzf/: completion.zsh  config.zsh  path.zsh
git/: aliases.zsh  default.nix  git-sup  git-up  gitconfig.symlink  gitignore.symlink
gnome/: default.nix
go/: path.zsh  profile.sh
gpg/: README.md  default.nix  gpg.conf  nixos-gpg.nix
haskell/: brittany-config.yaml  default.nix  ghci.conf  stack-config.yaml
js/: completion.zsh  path.zsh  profile.sh
mail/: account-book.nix  account-franka.nix  account-iohk.nix  account-ncoding.nix  default.nix  franka.sig  get_settings.py  iohk.sig  mailctl-config.yaml  mailctl-services.yaml  oama-config.yaml  offlineimaprc.symlink
modules/: agents.nix  desktop.nix  docker.nix  dygma-raise2.nix  leios-testnet.nix  logitech-mouse.nix  nix-tools.nix  obsidian.nix  user.nix  vms.nix  vpn.nix
nix/: default.nix  nix.conf  nixpkgs-overlays.nix  profile.sh
shell/: aliases.zsh  bashrc  colors.zsh  completion.zsh  config.zsh  default.nix  profile  profile.symlink  prompt.zsh  window.zsh  zprofile.symlink  zshrc  (+1 more)
xsession/xmonad/: shell.nix  xmonad-config.cabal  xmonad.hs
(+103 files in other folders)
