name:                xmonad-config 
version:             0.1.0
synopsis:            XMonad window manage
license:             MIT 
author:              Sebastian Nagel
maintainer:          sebastian.nagel@ncoding.at
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             xmonad.hs
  other-extensions:    DeriveDataTypeable, TupleSections
  build-depends:       base
                     , containers
                     , process
                     , time
                     , xmonad
                     , xmonad-contrib 
  default-language:    Haskell2010
